2010-xx-xx - release 0.9.1
        - Bugfix: Filling unused REL records used wrong offsets
        - Bugfix: Unbreak case-insensitive matching of FAT file names

2010-02-28 - release 0.9.0
        - Bugfix: REL offset calculation for records 256,512,...
        - Bugfix: Non-REL P command parameters now match README
        - Bugfix: Reading after EOI behaves correctly now
        - Red LED only active while unwritten data in memory
        - Remove XC,XJ commands
        - New fastloader: ULoad Model 3
        - New fastloader: G.I. Joe (said to be commonly ripped)
        - New fastloader: Epyx FastLoad cartridge
        - Support reading raw directory ($ with secondary > 0)
        - "display disk images as directories"-mode
        - DNP support
        - remote display support
        - build system doesn't require gawk anymore

2009-12-16 - release 0.8.3
        - Bugfix: Really prevent random corruption on FAT32 media
        - Bugfix: Free buffer after copying files

2009-09-27 - release 0.8.2
        - Bugfix: Prevent random storage corruption on FAT32 media
        - Bugfix: Image files not mountable if read-only file or media
        - Bugfix: Do not clear error channel if sec. 15 is closed
        - Add a dummy RTC read during init (to update year if required)
        - Enable I2C RTC support in LarsP configuration for Final Expansion 3
        - Acknowledge ATN during initialisation to stall C64 if required

2009-05-24 - release 0.8.1a
        - Fix bootloader version number generation

2009-05-20 - release 0.8.1
        - Fix uIEC/IDE SD card change detection
        - Dreamload support for uIEC
        - Mark the RTC time as valid after setting the clock
        - Delay SPI initialisation until absolutely required
        - Show disk change confirmation even when the error blink is active
        - Exit the FC3 fastloader if ATN is active
        - Fix indentation of 1000+ block files
        - Remove 0-byte from the long version message