@@ -79,6 +79,11 @@ else ifeq ($(MCU),atmega644p)
   EFUSE = 0xfd
   HFUSE = 0x91
   LFUSE = 0xef
+else ifeq ($(MCU),atmega1284p)
+  BINARY_LENGTH = 0x1f000
+  EFUSE = 0xfd
+  HFUSE = 0xd2
+  LFUSE = 0xe7
 else
 .PHONY: nochip
 nochip:
