@@ -28,7 +28,11 @@
 
 /* USART */
 
-#if defined __AVR_ATmega644__ || defined __AVR_ATmega644P__ || defined __AVR_ATmega1281__ || defined __AVR_ATmega2561__
+#if defined __AVR_ATmega644__  \
+ || defined __AVR_ATmega644P__ \
+ || defined __AVR_ATmega1281__ \
+ || defined __AVR_ATmega2561__ \
+ || defined __AVR_ATmega1284P__
 
 #  ifdef USE_UART1
 #    define RXC   RXC1
@@ -117,7 +121,10 @@
 #endif
 
 /* SPI and I2C */
-#if defined __AVR_ATmega32__ || defined __AVR_ATmega644__ || defined __AVR_ATmega644P__
+#if defined __AVR_ATmega32__    \
+ || defined __AVR_ATmega644__   \
+ || defined __AVR_ATmega644P__  \
+ || defined __AVR_ATmega1284P__
 
 #  define SPI_PORT   PORTB
 #  define SPI_DDR    DDRB
@@ -158,5 +165,41 @@
 #endif
 
 #define SPI_MASK (SPI_SS|SPI_MOSI|SPI_MISO|SPI_SCK)
+
+/* Fix for incompatible include in avr-libc for the 1284P */
+#if defined __AVR_ATmega1284P__ && !defined(PA0)
+#  define PA0 0
+#  define PA1 1
+#  define PA2 2
+#  define PA3 3
+#  define PA4 4
+#  define PA5 5
+#  define PA6 6
+#  define PA7 7
+#  define PB0 0
+#  define PB1 1
+#  define PB2 2
+#  define PB3 3
+#  define PB4 4
+#  define PB5 5
+#  define PB6 6
+#  define PB7 7
+#  define PC0 0
+#  define PC1 1
+#  define PC2 2
+#  define PC3 3
+#  define PC4 4
+#  define PC5 5
+#  define PC6 6
+#  define PC7 7
+#  define PD0 0
+#  define PD1 1
+#  define PD2 2
+#  define PD3 3
+#  define PD4 4
+#  define PD5 5
+#  define PD6 6
+#  define PD7 7
+#endif
 
 #endif /* AVRCOMPAT_H */
